# dna-main-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_prompt.py
{{cookiecutter.repo_name}}/: Makefile  databricks.yml
{{cookiecutter.repo_name}}/.github/actions/build-and-deploy/: action.yml
{{cookiecutter.repo_name}}/.github/workflows/: python-pr-check.yml  scala-pr-check.yml
{{cookiecutter.repo_name}}/python/: pyproject.toml  ruff.toml
{{cookiecutter.repo_name}}/scala/: build.sbt
